[gd_scene load_steps=13 format=2]

[ext_resource path="res://Interactables/interactBase.gd" type="Script" id=1]
[ext_resource path="res://Menus/buttonCus.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Buttons/defaultBase.png" type="Texture" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]
[ext_resource path="res://Assets/Text/Courneuf-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/dialogNew.png" type="Texture" id=6]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Other/male vox-v2.Team 7.ilcapand.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 8, 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 4, 8, 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="interactBase" type="Area2D" groups=["interactable"]]
pause_mode = 2
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
texture_scale = 0.5
energy = 0.76
shadow_enabled = true

[node name="playerDetection" type="CollisionShape2D" parent="."]
__meta__ = {
"_editor_description_": "adjust per item"
}

[node name="CanvasInteractions" type="CanvasLayer" parent="."]
layer = 5
__meta__ = {
"_editor_description_": "Interactions appear in here"
}

[node name="hint" type="Label" parent="CanvasInteractions"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 131.0
text = "hint"

[node name="dialog" type="Control" parent="CanvasInteractions"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasInteractions/dialog"]
visible = false
light_mask = 0
anchor_left = 0.192857
anchor_top = 0.310345
anchor_right = 0.807143
anchor_bottom = 0.68652
margin_left = 8.39233e-05
margin_top = 94.9999
margin_right = 9.15527e-05
margin_bottom = 94.9999
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasInteractions/dialog"]
light_mask = 0
anchor_left = 0.192857
anchor_top = 0.60815
anchor_right = 0.807143
anchor_bottom = 0.984326
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasInteractions/dialog"]
anchor_left = 0.207143
anchor_top = 0.633229
anchor_right = 0.807143
anchor_bottom = 0.968652
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasInteractions/dialog/VBoxContainer"]
margin_right = 336.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dialogBox" type="RichTextLabel" parent="CanvasInteractions/dialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 336.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Blinky" type="AnimatedSprite" parent="CanvasInteractions/dialog"]
position = Vector2( 442, 298 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="popup" type="Control" parent="CanvasInteractions"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasInteractions/popup"]
light_mask = 0
anchor_left = 0.192857
anchor_top = 0.310345
anchor_right = 0.807143
anchor_bottom = 0.68652
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasInteractions/popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -54.0
margin_right = 165.0
margin_bottom = 52.5

[node name="message" type="Label" parent="CanvasInteractions/popup/VBoxContainer"]
margin_right = 330.0
margin_bottom = 57.0
rect_clip_content = true
size_flags_vertical = 3
text = "Example
Text!"
align = 1
autowrap = true
max_lines_visible = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasInteractions/popup/VBoxContainer"]
margin_top = 64.0
margin_right = 330.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="option1" parent="CanvasInteractions/popup/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 163.0
margin_bottom = 39.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "one"

[node name="option2" parent="CanvasInteractions/popup/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_right = 330.0
margin_bottom = 39.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "two"

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 0
scale = Vector2( 0.5, 0.5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="CanvasInteractions/popup/VBoxContainer/HBoxContainer/option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="CanvasInteractions/popup/VBoxContainer/HBoxContainer/option2" to="." method="_on_option2_pressed"]
